--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -26,3 +26,14 @@ jobs:
       run: npm install
     - name: Run tests
       run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
+          wait-for-success: true
